2012-11-25  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use echo = TRUE for sourceCpp R code chunks
        * src/Module.cpp: BEGIN_RCPP/END_RCPP in InternalFunction_invoke
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: add documentation
        on correct semantics for signaling error conditions

2012-11-24  JJ Allaire <jj@rstudio.org>

        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: expand discussion
        of binary compatibility issues.

2012-11-23 Romain Francois <romain@r-enthusiasts.com>

        * src/AttributesParser.cpp : attempt to fix build issue on r-forge
        * include/Rcpp/DataFrame.h: nrows() method
        * include/Rcpp/vector/RangeIndexer.h: now derives from VectorBase so
	that we can use it in sugar.

2012-11-22  JJ Allaire <jj@rstudio.org>

        * include/exceptions.h: new exception constructor / stop function
        * src/exceptions.cpp: new exception constructor / stop function
        * include/RcppCommon.h: new exception constructor / stop function

2012-11-22 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/iostream.h: use delete rdbuf() as recommended by
	Martyn Plummer
        * include/Rcpp/sugar/functions/self_match.h: self_match, giving a
        functionality similar to match( x, unique(x) )
        * src/coerce.cpp: added coercion to STRSXP
        * include/Rcpp/internal/r_coerce.h : added r_coerce<.,STRPSXP>
        * include/Rcpp/sugar/functions/table.h: sugar table
        * include/Rcpp/sugar/functions/duplicated.h: sugar duplicated

2012-11-21  JJ Allaire <jj@rstudio.org>

        * R/Rcpp.package.skeleton.R: add 'attributes' and 'cpp_files'
        parameters to Rcpp.pacakge.skeleton
        * inst/skeleton/rcpp_hello_world_attributes.cpp: version of hello world
        that uses attributes
        * man/Rcpp.package.skeleton.Rd: doc updates
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: doc updates
        * DESCRIPTION: bump version to 0.10.0.3
