@@ -36,13 +36,13 @@ struct clamp_operator{
     }
     STORAGE lhs, rhs ;    
 } ;
-// need to write this qpecial version
+// need to write this special version
 template <>
 struct clamp_operator<REALSXP,true> {
     clamp_operator(double lhs_, double rhs_ ) : lhs(lhs_), rhs(rhs_){}
     
     inline double operator()(double x) const {
-        if( Rcpp::traits::is_na<REALSXP>(x) ) ;
+        if( Rcpp::traits::is_na<REALSXP>(x) )  return x ;
         return lhs < x ? lhs : (x < rhs ? x : rhs ) ;
     }
     double lhs, rhs ;    
